--- a/css/highscores.css
+++ b/css/highscores.css
@@ -12,3 +12,9 @@
 .high-score:hover {
     transform: scale(1.025);
 }
+
+@media only screen and (max-width: 360px) {
+    h1 {
+        font-size: 4rem;
+    }
+}
