--- a/css/game.css
+++ b/css/game.css
@@ -79,3 +79,9 @@
         transform: rotate(360deg);
     }
 }
+
+@media only screen and (max-width: 500px) {
+    * {
+        font-size: 1.5rem;
+    }
+}
