--- a/css/style.css
+++ b/css/style.css
@@ -119,3 +119,9 @@ input {
 input::placeholder {
     color: #aaa;
 }
+
+@media only screen and (max-width: 360px) {
+    h1 {
+        font-size: 4rem;
+    }
+}
